Fix overflow card bug #2

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -24,6 +24,7 @@ body {
 #root {
   height: 100%;
   width: 100%;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 }
